# qndiviewer

./: .clang-format  CMakeLists.txt  README.md
cmake/: ndi-config.cmake
src/: application.cpp  application.hpp  main.cpp  messagequeue.cpp  messagequeue.hpp  messages.hpp  ndifinder.cpp  ndifinder.hpp
